# slack-csv-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  Vectore_Store_Test.ipynb  local_test.py  main.py  pyproject.toml  vector_registry.json
docs/knowledge/: Supplier_PRD_Sop.txt
docs/knowledge/column_references/: OnTime_Data_columns.md  bookingpickup_columns.md  fba_emailer_columns.md  otif_pull_columns.md
docs/knowledge/csv_descriptions/: OnTime_Data.md  bookingpickup.md  fba_emailer.md  otif_pull.md
tools/: agent.py  csv_analyzer.py  document_search.py  query_enhancer.py  registry.py  storage.py  vector_store.py  vectorstore.py
